--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "uuid": "5856d2aa-7e3b-43ae-b2fa-dab420f69711"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=16.x.x <=18.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
